[gd_scene load_steps=2 format=2]

[ext_resource path="res://app.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 23.0
margin_top = 14.0
margin_right = 368.0
margin_bottom = 582.0

[node name="OpenFile" type="Button" parent="."]
margin_left = 395.0
margin_top = 22.9405
margin_right = 471.0
margin_bottom = 68.9405
text = "Open file"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAsFile" type="Button" parent="."]
margin_left = 393.0
margin_top = 82.0
margin_right = 469.0
margin_bottom = 128.0
text = "Save as file"

[node name="OpenFileDialog" type="FileDialog" parent="."]
margin_left = 175.0
margin_top = 83.0
margin_right = 892.0
margin_bottom = 519.0
window_title = "Open File"
mode = 0
access = 2
current_dir = "/Users/jonathan/drive/jhow/gamedev/godot/Text Editor"
current_path = "/Users/jonathan/drive/jhow/gamedev/godot/Text Editor/"

[node name="SaveAsFileDialog" type="FileDialog" parent="."]
margin_left = 175.0
margin_top = 83.0
margin_right = 892.0
margin_bottom = 519.0
window_title = "Save as file"
access = 2
current_dir = "/Users/jonathan/drive/jhow/gamedev/godot/Text Editor"
current_path = "/Users/jonathan/drive/jhow/gamedev/godot/Text Editor/"
[connection signal="pressed" from="OpenFile" to="." method="_on_OpenFile_pressed"]
[connection signal="pressed" from="SaveAsFile" to="." method="_on_SaveAsFile_pressed"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveAsFileDialog" to="." method="_on_SaveAsFileDialog_file_selected"]
